--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                 style="text-align:center;font-family:Mali;font-size:30px;flex-direction:row;padding-top:20px;padding-bottom:20px">
                 Our mission is to promote STEM and FIRST within our community to help establish the next generation of
                 innovators!</div><br />
-            <div style="display:flex;justify-content:center;align-items:center;margin:20px"><a class="purplebutton"
+            <div class="aboutbuttons"><a class="purplebutton"
                     href="/about.html"
                     style="display:flex;align-items:center;justify-content:center;margin-right:15px">2023-2024</a><a
                     class="purplebutton" href="/about/power-play.html"
@@ -82,14 +82,10 @@
                     </h1>
                     <hr style="width:300px" />
                     <div class="flex" style="align-items:center;justify-content:center">
-                        <div class="person-grid grid">
+                        <div class="person-three-grid grid">
                             <div class="grid-item">
-                                <div style="position:relative;margin:auto;width:230px;height:300px"><span
-                                        style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                            src="https://ftc18225.everstem.org/images/coaches/jason.png"
-                                            decoding="async" data-nimg="fill"
-                                            style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /></noscript></span>
-                                </div>
+                                <img src="https://ftc18225.everstem.org/images/coaches/jason.png" height="300px"
+                                class="member" />
                                 <h3>Coach Jason</h3><br />
                                 <p style="font-weight:300">I&#x27;m Coach Jason, a civil engineer and mechanical design
                                     mentor. I helped form and develop the team by providing strategic guidance. I work
@@ -97,12 +93,8 @@
                                     helping our team handle administrative tasks.</p>
                             </div>
                             <div class="grid-item">
-                                <div style="position:relative;margin:auto;width:230px;height:300px"><span
-                                        style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                            src="https://ftc18225.everstem.org/images/coaches/liangshou.jpg"
-                                            decoding="async" data-nimg="fill"
-                                            style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /></noscript></span>
-                                </div>
+                                <img src="https://ftc18225.everstem.org/images/coaches/liangshou.jpg" height="300px"
+                                class="member" />
                                 <h3>Coach Liangshou</h3><br />
                                 <p style="font-weight:300">I&#x27;m Liangshou Wu, and I work for Google. I have been a
                                     mentor/coach for FLL and FTC for 4 years. I enjoy working with students in various
@@ -110,12 +102,8 @@
                                     programming and mentoring other FTC teams.</p>
                             </div>
                             <div class="grid-item">
-                                <div style="position:relative;margin:auto;width:230px;height:300px"><span
-                                        style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                            src="https://ftc18225.everstem.org/images/coaches/yinhai.jpg"
-                                            decoding="async" data-nimg="fill"
-                                            style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /></noscript></span>
-                                </div>
+                                <img src="https://ftc18225.everstem.org/images/coaches/yinhai.jpg" height="300px"
+                                class="member" />
                                 <h3>Coach Yinhai</h3><br />
                                 <p style="font-weight:300">I&#x27;m Dr. Yinhai Wang, a professor in transportation
                                     engineering and the founding director of the STAR Lab at the University of
@@ -132,9 +120,9 @@
                     </h1>
                     <hr style="width:300px" />
                     <div class="flex" style="align-items:center;justify-content:center">
-                        <div class="person-grid grid">
+                        <div class="person-three-grid grid">
                             <div class="grid-item">
-                                <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                                <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                         style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                             src="https://ftc18225.everstem.org/images/mentors/lani.jpg"
                                             decoding="async" data-nimg="fill"
@@ -143,7 +131,7 @@
                                 <h3>Lani Cao</h3>
                             </div>
                             <div class="grid-item">
-                                <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                                <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                         style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                             src="https://ftc18225.everstem.org/images/mentors/patrick.jpg"
                                             decoding="async" data-nimg="fill"
@@ -152,7 +140,7 @@
                                 <h3>Patrick Tien</h3>
                             </div>
                             <div class="grid-item">
-                                <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                                <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                         style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                             src="https://ftc18225.everstem.org/images/mentors/shikha.jpg"
                                             decoding="async" data-nimg="fill"
@@ -171,7 +159,7 @@
                     <hr style="width:300px" />
                     <div class="person-grid grid">
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/albert.jpg"
                                         decoding="async" data-nimg="fill"
@@ -183,7 +171,7 @@
                                 clarinet and existing. A fun fact about me is that I dislike caramel in any form.</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/allen.jpg"
                                         decoding="async" data-nimg="fill"
@@ -196,7 +184,7 @@
                                 programming, playing tennis, and hanging out with my friends.</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/andrew.jpg"
                                         decoding="async" data-nimg="fill"
@@ -208,7 +196,7 @@
                                 basketball with my friends.</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/alex.jpg"
                                         decoding="async" data-nimg="fill"
@@ -220,7 +208,7 @@
                                 spotting. A fun fact about me is that my dream car is a 2005 Subaru Impreza WRX STI.</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/andy.jpg"
                                         decoding="async" data-nimg="fill"
@@ -233,7 +221,7 @@
                                 soccer. A fun fact about me is that I like dinosaurs.</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/calvin.jpg"
                                         decoding="async" data-nimg="fill"
@@ -245,7 +233,7 @@
                                 fact about me is that I like cheese.</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/cynthia.jpg"
                                         decoding="async" data-nimg="fill"
@@ -258,7 +246,7 @@
                                 Beijing Olympics!</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/eesha.jpg"
                                         decoding="async" data-nimg="fill"
@@ -272,7 +260,7 @@
                                 chocolate chip ice cream.</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/ethan.jpg"
                                         decoding="async" data-nimg="fill"
@@ -284,7 +272,7 @@
                                 enjoy listening to music and reading. A fun fact about me is that I love foxes.</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/eugene.jpg"
                                         decoding="async" data-nimg="fill"
@@ -296,7 +284,7 @@
                                 working on rocketry. A fun fact about me is that I don’t like dinosaurs.</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/jeffrey.jpg"
                                         decoding="async" data-nimg="fill"
@@ -308,7 +296,7 @@
                                 sports, spending time with friends, and playing chess.<!-- --> </p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                         src="https://ftc18225.everstem.org/images/teammembers/julia.jpg"
                                         decoding="async" data-nimg="fill"
@@ -322,7 +310,7 @@
                                 animals!</p>
                         </div>
                         <div class="grid-item">
-                            <div style="position:relative;margin:auto;width:230px;height:300px"><span
+                            <div style="position:relative;margin:auto;width:100%;height:300px"><span
                                 style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
                                     src="https://ftc18225.everstem.org/images/teammembers/rohit.jpg"
                                     decoding="async" data-nimg="fill"
