fixed about page

--- a/about/freight-frenzy.html
+++ b/about/freight-frenzy.html
@@ -44,15 +44,12 @@
                 <ul class="tabs">
                     <li class="logo"><a href="/"><img src="https://ftc18225.everstem.org/logo.png" width="45px"
                                 height="45px" /></a></li>
-                    <li style="display:none" class="tab"><a id="Home" class="tab-label" href="/">Home</a></li>
-                    <li style="display:none" class="tab"><a id="About" class="tab-label" href="/about">About</a></li>
-                    <li style="display:none" class="tab"><a id="Events" class="tab-label" href="/events">Events</a></li>
-                    <li style="display:none" class="tab"><a id="Seasons" class="tab-label" href="/seasons">Seasons</a>
-                    </li>
-                    <li style="display:none" class="tab"><a id="Resources" class="tab-label"
-                            href="/resources">Resources</a></li>
-                    <li style="display:none" class="tab"><a id="Contact" class="tab-label" href="/contact">Contact</a>
-                    </li>
+                    <li class="tab"><a id="Home" class="tab-label" href="/">Home</a></li>
+                    <li class="tab"><a id="About" class="tab-label this-page" href="/about.html">About</a></li>
+                    <li class="tab"><a id="Events" class="tab-label" href="/events.html">Events</a></li>
+                    <li class="tab"><a id="Seasons" class="tab-label" href="/seasons.html">Seasons</a></li>
+                    <li class="tab"><a id="Resources" class="tab-label" href="/resources.html">Resources</a></li>
+                    <li class="tab"><a id="Contact" class="tab-label" href="/contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="sidepanel" style="height:25vh">
@@ -283,30 +280,29 @@
             </div>
             <div>
                 <div class="section">
-                    <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Team
-                        Highlights</h1>
+                    <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Team Highlights</h1>
                     <hr style="width:300px" />
                     <div class="teamhighlights grid">
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.orgimages/worldrobotrevealthumbnail.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://ftc18225.everstem.org/images/worldrobotrevealthumbnail.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=Bo4R6sHHHWY">
                                 <h3>FTC 18225 World Robot Reveal</h3>
                             </a>
                         </div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.orgimages/VISIONARY.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://ftc18225.everstem.org/images/VISIONARY.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=VaWNdEoWUtE">
                                 <h3>World Championship Robot Reveal Trailer</h3>
                             </a>
                         </div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.orgimages/controlthumbnail.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://ftc18225.everstem.org/images/controlthumbnail.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=UlNMlCkZbEQ">
                                 <h3>Washington State Control Award Video</h3>
                             </a>
                         </div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.orgimages/robotskeleton.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://ftc18225.everstem.org/images/robotskeleton.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://tinyurl.com/FTC18225StateRobot">
                                 <h3>Washington State Freight Frenzy Robot CAD</h3>
                             </a>
