--- a/about/ultimate-goal.html
+++ b/about/ultimate-goal.html
@@ -44,15 +44,12 @@
                 <ul class="tabs">
                     <li class="logo"><a href="/"><img src="https://ftc18225.everstem.org/logo.png" width="45px"
                                 height="45px" /></a></li>
-                    <li style="display:none" class="tab"><a id="Home" class="tab-label" href="/">Home</a></li>
-                    <li style="display:none" class="tab"><a id="About" class="tab-label" href="/about">About</a></li>
-                    <li style="display:none" class="tab"><a id="Events" class="tab-label" href="/events">Events</a></li>
-                    <li style="display:none" class="tab"><a id="Seasons" class="tab-label" href="/seasons">Seasons</a>
-                    </li>
-                    <li style="display:none" class="tab"><a id="Resources" class="tab-label"
-                            href="/resources">Resources</a></li>
-                    <li style="display:none" class="tab"><a id="Contact" class="tab-label" href="/contact">Contact</a>
-                    </li>
+                    <li class="tab"><a id="Home" class="tab-label" href="/">Home</a></li>
+                    <li class="tab"><a id="About" class="tab-label this-page" href="/about.html">About</a></li>
+                    <li class="tab"><a id="Events" class="tab-label" href="/events.html">Events</a></li>
+                    <li class="tab"><a id="Seasons" class="tab-label" href="/seasons.html">Seasons</a></li>
+                    <li class="tab"><a id="Resources" class="tab-label" href="/resources.html">Resources</a></li>
+                    <li class="tab"><a id="Contact" class="tab-label" href="/contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="sidepanel" style="height:25vh">
@@ -230,25 +227,25 @@
                     <hr style="width:300px" />
                     <div class="teamhighlights grid">
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.orgimages/seasons/ultimategoal/scorpionv3.png);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://ftc18225.everstem.org/images/seasons/ultimategoal/scorpionv3.png);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=Fn46jRJG2Es">
                                 <h3>Scorpion CAD Version 3</h3>
                             </a>
                         </div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.orgimages/seasons/ultimategoal/intake.png);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://ftc18225.everstem.org/images/seasons/ultimategoal/intake.png);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=eL6ZAtWQX9g">
                                 <h3>Simplest Ring Intake Subsystem</h3>
                             </a>
                         </div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.orgimages/seasons/ultimategoal/statecontrol.png);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://ftc18225.everstem.org/images/seasons/ultimategoal/statecontrol.png);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=vkxp2Lw1z80">
                                 <h3>State Control Award Video</h3>
                             </a>
                         </div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.orgimages/seasons/ultimategoal/interleaguecontrol.png);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://ftc18225.everstem.org/images/seasons/ultimategoal/interleaguecontrol.png);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=tQRB3qGeSY8">
                                 <h3>Interleague Control Award Video</h3>
                             </a>
