--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div >
                 <div class="section">
                     <div class="flex impact">
-                        <div class="grid" style="width:80%">
+                        <div class="person-three-grid grid" style="width:80%; color: white;">
                             <div class="col" style="text-align:center"><svg aria-hidden="true" focusable="false"
                                     data-prefix="fas" data-icon="user" class="svg-inline--fa fa-user icon" role="img"
                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="75" height="75">
