--- a/index.html
+++ b/index.html
@@ -176,25 +176,17 @@
                     <hr style="width:300px" />
                     <p>Thank you to our sponsors for supporting our team and helping us learn.</p>
                     <div class="react-photo-gallery--gallery">
-                        <div style="position: relative; height: 207.2px;"><img src="/images/sponsors/adobe.png"
-                                width="132.8" height="132.8"
-                                style="margin: 2px; display: block; position: absolute; left: 0px; top: 0px;"><img
-                                src="/images/sponsors/boeing.png" width="132.8" height="132.8"
-                                style="margin: 2px; display: block; position: absolute; left: 136.8px; top: 0px;"><img
-                                src="/images/sponsors/digipen.png" width="132.8" height="132.8"
-                                style="margin: 2px; display: block; position: absolute; left: 273.7px; top: 0px;"><img
-                                src="/images/sponsors/google.png" width="132.8" height="132.8"
-                                style="margin: 2px; display: block; position: absolute; left: 410.5px; top: 0px;"><img
-                                src="/images/sponsors/microsoft.png" width="132.8" height="132.8"
-                                style="margin: 2px; display: block; position: absolute; left: 547.3px; top: 0px;"><img
-                                src="/images/sponsors/pactrans.png" width="132.8" height="132.8"
-                                style="margin: 2px; display: block; position: absolute; left: 684.2px; top: 0px;"><img
-                                src="/images/sponsors/protocase.png" width="132.8" height="66.4"
-                                style="margin: 2px; display: block; position: absolute; left: 0px; top: 136.8px;"><img
-                                src="/images/sponsors/xcamp.gif" width="132.8" height="66.4"
-                                style="margin: 2px; display: block; position: absolute; left: 136.8px; top: 136.8px;">
+                        <div class="gallery-row">
+                            <img src="https://ftc18225.everstem.org/images/sponsors/adobe.png" width="132.8" height="132.8">
+                            <img src="https://ftc18225.everstem.org/images/sponsors/boeing.png" width="132.8" height="132.8">
+                            <img src="https://ftc18225.everstem.org/images/sponsors/digipen.png" width="132.8" height="132.8">
+                            <img src="https://ftc18225.everstem.org/images/sponsors/google.png" width="132.8" height="132.8">
+                            <img src="https://ftc18225.everstem.org/images/sponsors/microsoft.png" width="132.8" height="132.8">
+                            <img src="https://ftc18225.everstem.org/images/sponsors/pactrans.png" width="132.8" height="132.8">
+                            <img src="https://ftc18225.everstem.org/images/sponsors/protocase.png" width="132.8" height="66.4">
+                            <img src="https://ftc18225.everstem.org/images/sponsors/xcamp.gif" width="132.8" height="66.4">
                         </div>
-                    </div>
+                    </div>                    
                 </div>
             </div>
         </div>
