--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div>
                 <div class="row" style="margin:10px;padding:10px;background-color:#333;border-radius:10px">
                     <div class="column" style="display:flex;justify-content:center;align-items:center"><img
-                            src="https://ftc18225.everstem.org/images/TeamPicture.png" width="70%" /></div>
+                            src="https://ftc18225.everstem.org/images/TeamPicture.jpg" width="70%" /></div>
                     <div class="column aboutUsCol" style="font-weight:300;padding:20px">
                         <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">
                             About Us</h1>
