--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="sidepanel" style="height:70vh">
                 <div style="font-family:Roboto;font-weight:400;color:white" class="floating">
                     <h1 style="margin-bottom:5px">HIGH DEFINITION</h1>
-                    <p style="margin:0;padding:0;font-size:25px">Reaching High. Defining Futures.</p>
+                    <p style="margin:0;padding:0;font-size:30px">Reaching High. Defining Futures.</p>
                     <p style="margin:0;padding:0"><i>FTC Team 18225</i></p>
                 </div>
             </div>
@@ -71,7 +71,7 @@
         <div class="Index">
             <div class="section">
                 <div class="typewriter"
-                    style="text-align:center;font-family:Mali;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:40px">
+                    style="text-align:center;font-family:Poppins;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:40px">
                     Hello!<br /> We are FTC 18225 striving to<br /> INSPIRE!
                 </div>
             </div>
