--- a/index.html
+++ b/index.html
@@ -70,11 +70,18 @@
         </div>
         <div class="Index">
             <div class="section">
-                <div class="typewriter"
-                    style="text-align:center;font-family:Poppins;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:40px">
-                    Hello!<br /> We are FTC 18225 striving to<br /> INSPIRE!
+                <div class = "banner-text"
+                 style="text-align:center;font-family:poppins;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:40px">
+                Hello!<br /> We are FTC 18225 striving to <br />
+                <div class="typewriter">
+                    <div class="box b1">INSPIRE</div>
+                    <div class="box b2">MOTIVATE</div>
+                    <div class="box b3">CONNECT</div>
+                    <div class="box b4">INNOVATE</div>
+                    <div class="box b5">CONTROL</div>
                 </div>
             </div>
+        </div>
             <div>
                 <div class="row" style="margin:10px;padding:10px;background-color:#333;border-radius:10px">
                     <div class="column" style="display:flex;justify-content:center;align-items:center"><img
