--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 </div>
             </div>
         </div>
+
         <div class="Index">
-            <div class="section">
-                <div class = "banner-text"
-                 style="text-align:center;font-family:poppins;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:40px">
+            <div class="section" style="text-align:center;font-family:poppins;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:40px">
+                <div class = "banner-text">
                 Hello!<br /> We are FTC 18225 striving to <br />
                 <div class="typewriter">
                     <div class="box b1">INSPIRE</div>
@@ -83,6 +83,7 @@
             </div>
         </div>
             <div>
+
                 <div class="row" style="margin:10px;padding:10px;background-color:#333;border-radius:10px">
                     <div class="column" style="display:flex;justify-content:center;align-items:center"><img
                             src="https://ftc18225.everstem.org/images/TeamPicture.jpg" width="70%" /></div>
