--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="Index">
             <div class="section" style="text-align:center;font-family:poppins;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:40px">
                 <div class = "banner-text">
-                Hello!<br /> We are FTC 18225 striving to <br />
+                We strive to to
                 <div class="typewriter">
                     <div class="box b1">INSPIRE</div>
                     <div class="box b2">MOTIVATE</div>
