--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="Index">
-            <div class="section" style="text-align:center;font-family:poppins;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:40px">
+            <div class="section" style="text-align:center;font-family:roboto;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:40px">
                 We strive to to
                 <div class="typewriter">
                     <div class="box b1">INSPIRE</div>
