--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div style="font-family:Roboto;font-weight:400;color:white" class="floating">
                     <h1 style="margin-bottom:5px">HIGH DEFINITION</h1>
                     <p style="margin:0;padding:0;font-size:30px">Reaching High. Defining Futures.</p>
-                    <p style="margin:0;padding:0"><i>FTC Team 18225</i></p>
+                    <p style="margin:0;padding:0;font-size:20px"><i>FTC Team 18225</i></p>
                 </div>
             </div>
         </div>
