--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </div>
 
         <div class="Index">
-            <div class="section" style="text-align:center;font-family:roboto;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:40px">
-                We strive to to
+            <div class="section" style="text-align:center;font-family:roboto;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:80px">
+                We strive to...
                     <div class="box b1">INSPIRE</div>
                     <div class="box b2">MOTIVATE</div>
                     <div class="box b3">CONNECT</div>
