--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
+    <!-- Open Sans Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
     <style>
         .icon path {
             fill: white;
@@ -70,7 +75,7 @@
         </div>
 
         <div class="Index">
-            <div class="section" style="text-align:center;font-family:roboto;font-size:50px;flex-direction:row;padding-top:40px;padding-bottom:80px">
+            <div class="section" style="text-align:center;font-family:roboto;font-size:45px;flex-direction:row;padding-top:40px;padding-bottom:80px">
                 As a team, we strive to...
                     <div class="box b1">INSPIRE</div>
                     <div class="box b2">MOTIVATE</div>
