--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="box b5">CONTROL</div>
             </div>
 
-                <div class="row" style="margin:10px;padding:10px;background-color:#333;border-radius:10px">
+                <div class="row" style="margin:10px;padding:10px;background-color:#AB3D86;border-radius:10px">
                     <div class="column" style="display:flex;justify-content:center;align-items:center"><img
                             src="https://ftc18225.everstem.org/images/TeamPicture.jpg" width="70%" /></div>
                     <div class="column aboutUsCol" style="font-weight:300;padding:20px">
