--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             </div>
         </div>
 
+        <!--
         <div class="Index">
             <div class="section" style="text-align:center;font-family:roboto;color:#AB3D86;font-size:45px;flex-direction:row;padding-top:40px;padding-bottom:100px">
                 As a team, we strive to...
@@ -83,6 +84,9 @@
                     <div class="box b4">INNOVATE</div>
                     <div class="box b5">CONTROL</div>
             </div>
+
+
+
 
                 <div class="row" style="margin:10px;padding:10px;background-color:#AB3D86;border-radius:10px">
                     <div class="column" style="display:flex;justify-content:center;align-items:center"><img
@@ -147,7 +151,7 @@
                         FIRST</h1>
                     <hr style="width:300px" />
                     <p style="font-weight:300;margin-top:0"><a href="https://www.firstinspires.org/"
-                            style="color:white">FIRST Inspires</a> <!-- -->is a non-profit that <b>inspires</b> the next
+                            style="color:white">FIRST Inspires</a> is a non-profit that <b>inspires</b> the next
                         generation of STEM innovators by challenging them in hands-on-learning through robotics
                         competitions. Through these programs, students not only learn how to build and program a robot,
                         but how to be a leader, work in a team, be confident in themselves, and more.</p>
@@ -204,6 +208,8 @@
             </div>
         </div>
     </div>
+
+    -->
 
     <div class="Footer">
         <div class="footerPt2">
