--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
             </div>
         </div>
 
+        <div class="AbtUs" style="background-color: #fff; font-family: roboto; color: #000000;padding-top:30px;padding-bottom:30px;">
+            <h1 style = "text-align:end;">ABOUT US</h1>
+        </div>
+
         <!--
         <div class="Index">
             <div class="section" style="text-align:center;font-family:roboto;color:#AB3D86;font-size:45px;flex-direction:row;padding-top:40px;padding-bottom:100px">
