--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             </div>
         </div>
 
-        <div class="AbtUs" style="background-color: #fff; font-family: roboto; color: #000000;padding-top:30px;padding-bottom:30px;">
-            <h1 style = "text-align:end;">ABOUT US</h1>
+        <div class="AbtUs" style="background-color: #fff; font-family: roboto; color: #000000;padding-top:30px;padding-bottom:30px;padding-right: 40px;">
+            <h1 style = "text-align:end;font-size: 50px;">ABOUT US</h1>
         </div>
 
         <!--
